# fhgr-sweng

./: .gitignore  Projektplanung.md  README.md  Shortcuts_Commands.md  pyproject.toml  shapes.csv
doc/: ProjectMap.md  Projektplanung.md  commands_shortcuts git vs.md  git commands.md
find_shapes/: __init__.py  camera.py  circle.py  display.py  image_processor.py  logger.py  main.py  point.py  point2d.py  polygon.py  shape.py
