[tool.poetry]
name = "find-shapes"
version = "0.1.0"
description = ""
authors = ["raphael <GitRaphael>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
opencv-python = "^4.8.1.78"
numpy = "^1.26.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
